force-app/main/default/objects/Equipment_Survey__c/Equipment_Survey__c.object-meta.xml
<CustomObject>
    <label>Equipment Survey</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Equipment Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>