force-app/main/default/objects/Equipment_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This si the information text that we can use for more details</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Survey</relationshipLabel>
    <relationshipName>Equipment_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>