force-app/main/default/objects/Equipment_Survey__c/fields/All_other_items__c.field-meta.xml
<CustomField>
    <fullName>All_other_items__c</fullName>
    <label>All other items</label>
    <type>TextArea</type>
</CustomField>