force-app/main/default/objects/Equipment_Survey__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Völker</fullName>
            </value>
            <value>
                <fullName>Liko</fullName>
            </value>
            <value>
                <fullName>Borg Warner</fullName>
            </value>
            <value>
                <fullName>Linet/Wissner-Bossenhoff</fullName>
            </value>
            <value>
                <fullName>Arjo Huntleigh / KCI</fullName>
            </value>
            <value>
                <fullName>Stryker / Gaymar / Air Systems</fullName>
            </value>
            <value>
                <fullName>Carroll</fullName>
            </value>
            <value>
                <fullName>Joerns</fullName>
            </value>
            <value>
                <fullName>Stiegelmeyer</fullName>
            </value>
            <value>
                <fullName>Malvestio</fullName>
            </value>
            <value>
                <fullName>Parkhouse</fullName>
            </value>
            <value>
                <fullName>Care of Sweden</fullName>
            </value>
            <value>
                <fullName>Smith and Nephew</fullName>
            </value>
            <value>
                <fullName>Talley</fullName>
            </value>
            <value>
                <fullName>Umano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>