force-app/main/default/objects/Equipment_Survey__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Equipment Survey</relationshipLabel>
    <relationshipName>Equipment_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>