force-app/main/default/objects/Equipment_Survey__c/fields/Equipment_Survey_Options__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Survey_Options__c</fullName>
    <label>Equipment Survey Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unable to obtain information</fullName>
            </value>
            <value>
                <fullName>Denied Entry</fullName>
            </value>
            <value>
                <fullName>Called Account</fullName>
            </value>
            <value>
                <fullName>Walked through facility</fullName>
            </value>
            <value>
                <fullName>Within my current records</fullName>
            </value>
            <value>
                <fullName>No Beds tied to Account</fullName>
            </value>
            <value>
                <fullName>JDE Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>