force-app/main/default/objects/Equipment_Survey__c/fields/Important_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Important_Criteria__c</fullName>
    <inlineHelpText>What other criteria are important to you when renting products?</inlineHelpText>
    <label>Important Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>