force-app/main/default/objects/Equipment_Survey__c/fields/Install_Year__c.field-meta.xml
<CustomField>
    <fullName>Install_Year__c</fullName>
    <description>Year product was Installed - Shipment Date</description>
    <label>Install Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>