force-app/main/default/objects/Equipment_Survey__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Total Care</fullName>
            </value>
            <value>
                <fullName>Total Care with Duo II</fullName>
            </value>
            <value>
                <fullName>Total Care SpO2rt</fullName>
            </value>
            <value>
                <fullName>Total Care P500</fullName>
            </value>
            <value>
                <fullName>Progressa Dining Chair Accumax</fullName>
            </value>
            <value>
                <fullName>Progressa Chair Egress P500</fullName>
            </value>
            <value>
                <fullName>Progressa Chair Egress P500 PMMS</fullName>
            </value>
            <value>
                <fullName>Progressa Chair Egress Pulmonary</fullName>
            </value>
            <value>
                <fullName>Progressa Chair Egress Pulmonary PMMS</fullName>
            </value>
            <value>
                <fullName>Versacare</fullName>
            </value>
            <value>
                <fullName>AvantGuard 800 / 1200 / 1400</fullName>
            </value>
            <value>
                <fullName>AvantGuard 1600</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 900</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 900 SSR</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 1000</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 405</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 305</fullName>
            </value>
            <value>
                <fullName>Centuris</fullName>
            </value>
            <value>
                <fullName>Medicraft MedSurg Beds</fullName>
            </value>
            <value>
                <fullName>AvantGuard 800 LTC</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 200</fullName>
            </value>
            <value>
                <fullName>Trio</fullName>
            </value>
            <value>
                <fullName>Medicraft LTC Beds</fullName>
            </value>
            <value>
                <fullName>Total Care Bariatric</fullName>
            </value>
            <value>
                <fullName>Triflex</fullName>
            </value>
            <value>
                <fullName>ExcelCare</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Affinity 2</fullName>
            </value>
            <value>
                <fullName>Affinity III</fullName>
            </value>
            <value>
                <fullName>Affinity IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>