force-app/main/default/objects/Equipment_Survey__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>840 or 850</fullName>
            </value>
            <value>
                <fullName>Adel</fullName>
            </value>
            <value>
                <fullName>Advance Series</fullName>
            </value>
            <value>
                <fullName>Advanta 2</fullName>
            </value>
            <value>
                <fullName>Affinity 2</fullName>
            </value>
            <value>
                <fullName>Affinity III</fullName>
            </value>
            <value>
                <fullName>Affinity IV</fullName>
            </value>
            <value>
                <fullName>AVE 2 (L&amp;D)</fullName>
            </value>
            <value>
                <fullName>Basic Care Bed</fullName>
            </value>
            <value>
                <fullName>CareAssist</fullName>
            </value>
            <value>
                <fullName>Centrella</fullName>
            </value>
            <value>
                <fullName>Centura Series</fullName>
            </value>
            <value>
                <fullName>Century</fullName>
            </value>
            <value>
                <fullName>Compella</fullName>
            </value>
            <value>
                <fullName>Eleganza</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Go Bed</fullName>
            </value>
            <value>
                <fullName>Hill-Rom 80 Bed</fullName>
            </value>
            <value>
                <fullName>Intouch</fullName>
            </value>
            <value>
                <fullName>LD304</fullName>
            </value>
            <value>
                <fullName>Low Bed</fullName>
            </value>
            <value>
                <fullName>LTC Platforms</fullName>
            </value>
            <value>
                <fullName>MPS</fullName>
            </value>
            <value>
                <fullName>Multicare</fullName>
            </value>
            <value>
                <fullName>Multicare LE</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Ook Snow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other/Postpartum</fullName>
            </value>
            <value>
                <fullName>Progressa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>