force-app/main/default/objects/Equipment_Survey__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>