force-app/main/default/objects/Equipment_Survey__c/fields/Purchase_Year__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Year__c</fullName>
    <label>Purchase Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2009</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2007</fullName>
            </value>
            <value>
                <fullName>2006</fullName>
            </value>
            <value>
                <fullName>2005</fullName>
            </value>
            <value>
                <fullName>2004</fullName>
            </value>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>1999</fullName>
            </value>
            <value>
                <fullName>1998</fullName>
            </value>
            <value>
                <fullName>1997</fullName>
            </value>
            <value>
                <fullName>1996</fullName>
            </value>
            <value>
                <fullName>1995</fullName>
            </value>
            <value>
                <fullName>1994</fullName>
            </value>
            <value>
                <fullName>1993</fullName>
            </value>
            <value>
                <fullName>1992</fullName>
            </value>
            <value>
                <fullName>1991</fullName>
            </value>
            <value>
                <fullName>1990</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>