force-app/main/default/objects/Equipment_Survey__c/fields/Service_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Expiration_Date__c</fullName>
    <label>Service Contract Expiration Date</label>
    <type>Date</type>
</CustomField>