force-app/main/default/objects/Equipment_Survey__c/fields/Service_Contract_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_in_Place__c</fullName>
    <label>Service Contract in Place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>