force-app/main/default/objects/Equipment_Survey__c/fields/Service_Contract_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Supplier__c</fullName>
    <label>Service Contract Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Contract_in_Place__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Borg Warner</fullName>
            </value>
            <value>
                <fullName>Carroll</fullName>
            </value>
            <value>
                <fullName>Huntleigh</fullName>
            </value>
            <value>
                <fullName>Joerns</fullName>
            </value>
            <value>
                <fullName>Linet</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Völker</fullName>
            </value>
            <value>
                <fullName>Arjo Huntleigh</fullName>
            </value>
            <value>
                <fullName>Wissner-Bossenhoff</fullName>
            </value>
            <value>
                <fullName>Stiegelmeyer</fullName>
            </value>
            <value>
                <fullName>Malvestio</fullName>
            </value>
            <value>
                <fullName>Parkhouse</fullName>
            </value>
            <value>
                <fullName>Care of Sweden</fullName>
            </value>
            <value>
                <fullName>Smith and Nephew</fullName>
            </value>
            <value>
                <fullName>Talley</fullName>
            </value>
            <value>
                <fullName>In House (Bio-engineer)</fullName>
            </value>
            <value>
                <fullName>3rd Party (non-manufacturer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>