force-app/main/default/objects/Equipment_Survey__c/fields/Service_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Type__c</fullName>
    <label>Service Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Contract_in_Place__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Maintenance &amp; Spare Parts (All-In)</fullName>
            </value>
            <value>
                <fullName>Safety Inspection</fullName>
            </value>
            <value>
                <fullName>Other (Please enter in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>