force-app/main/default/objects/Equipment_Survey__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Maternal</fullName>
            </value>
            <value>
                <fullName>Med-Surg</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Psych</fullName>
            </value>
            <value>
                <fullName>Step-Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>