force-app/main/default/objects/Equipment_Survey__c/recordTypes/INT_ICU.recordType-meta.xml
<RecordType>
    <fullName>INT_ICU</fullName>
    <active>true</active>
    <description>Intensive Care / Critical Care</description>
    <label>ICU</label>
</RecordType>